# Qt-Reporting-Tools

./: README.md
reportpp-master/reportpp-master/: .kateproject  AUTHORS  CMakeLists.txt  COMPILE.md  README.md
reportpp-master/reportpp-master/doc/: Doxyfile
reportpp-master/reportpp-master/include/reportpp/: ReportGen.hpp  ReportGlobals.hpp
reportpp-master/reportpp-master/include/reportpp/executors/: BlockExecutor.hpp  DataPageExecutor.hpp  PageExecutor.hpp
reportpp-master/reportpp-master/include/reportpp/parser/: PageBlock.hpp  PageFormat.hpp  Report.hpp  ReportPage.hpp
reportpp-master/reportpp-master/include/reportpp/support/: Callers.hpp
reportpp-master/reportpp-master/include/reportpp/templates/operation/: Operation.hpp  SetCompressionMode.hpp  SetCurrentEncoder.hpp  SetEncryptionMode.hpp  SetInfoAttr.hpp  SetInfoDateAttr.hpp  SetOpenAction.hpp  SetPageLayout.hpp  SetPageMode.hpp  SetPagesConfiguration.hpp  SetPassword.hpp  SetPermission.hpp  SetViewerPreference.hpp
reportpp-master/reportpp-master/include/reportpp/templates/operation/page/: SetCMYKFill.hpp  SetCMYKStroke.hpp  SetCharSpace.hpp  SetDash.hpp  SetExtGState.hpp  SetFlat.hpp  SetFontAndSize.hpp  SetGrayFill.hpp  SetGrayStroke.hpp  SetLineCap.hpp  (+15 more)
reportpp-master/reportpp-master/include/reportpp/types/: Graphics.hpp  PageFormat.hpp  ReportFormat.hpp
reportpp-master/reportpp-master/src/: ReportGen.cpp
reportpp-master/reportpp-master/src/parser/: PageBlock.cpp  PageFormat.cpp  Report.cpp
reportpp-master/reportpp-master/src/types/: types_writer.cpp
reportpp-master/reportpp-master/test/generator-test/: CMakeLists.txt  main.cpp
reportpp-master/reportpp-master/test/src/: reportpp-driver.cxx  reportpp-pimpl.cxx  reportpp-pimpl.hxx
reportpp-master/reportpp-master/test/test1/: test1.xml  test2.xml  test3.xml
reportpp-master/reportpp-master/xml-schema/: Makefile  reportpp.xsd  types.map
(+5 files in other folders)
